--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,16 @@
 {
-  "name": "Unstar",
+  "name": "Yelp Unstar",
     "version": "1.0",
     "background": {"scripts": ["background.js"]},
     "manifest_version": 2,
     "description": "This provides a toggle to hide/show any yelp star reviews.",
     "browser_action": {
-      "default_icon": "inactive_icon.png"
+      "default_icon": "active_icon.png"
+    },
+    "icons": {
+      "16": "active_icon_16.png",
+      "48": "active_icon_48.png",
+      "128": "active_icon_128.png"
     },
     "permissions": [
          "tabs", "http://*/*"
